--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 CLOUDINARY_API_SECRET=NO9garFO6693OyM2G88Va9UGwt4
 CLOUDINARY_API_KEY = 957238194124347
+DATABASEURL = mongodb://127.0.0.1:27017/yelp_camp
